# vg151-codequality

./: .clang-format  CMakeLists.txt  Readme.md  add_new_check.py  deploy.sh
.github/workflows/: build.yml
codequality/: CMakeLists.txt  CodeQualityTidyModule.cpp  NoFflushStdinCheck.cpp  NoFflushStdinCheck.h  NoGlobalVariablesCheck.cpp  NoGlobalVariablesCheck.h  NoHeaderGuardCheck.cpp  NoHeaderGuardCheck.h  NoPublicMemberVariablesCheck.cpp  NoPublicMemberVariablesCheck.h  UncheckedMallocResultCheck.cpp  UncheckedMallocResultCheck.h
tests/: Makefile  complicated_malloc.c  fflush_stdin.c  header.h  public_member_variable.cpp  public_member_variable.h  simple_malloc.c  simple_static.c  singleton.cpp  test.md
